--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,4 +7,4 @@ jobs:
       - name: Prepare repo
         uses: actions/checkout@master
       - name: Test
-        run: python test_Car.py
+        run: dir
