--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:      
       - name: Checkout
-        run: git checkout master
+        uses: actions/checkout@v2
+        with:
+          ref: 'master'
       - name: Dir
         run: dir
       - name: Test
